bk_ida/gccida/c1/ix86_force_to_memory
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_force_to_memory/src/i386.c:12634:28: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  ix86_force_to_memory( machine_mode mode, rtx operand) 
                           ^
                           enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_force_to_memory/src/i386.c:12647:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_force_to_memory/src/i386.c:12648:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_force_to_memory/src/i386.c:12687:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_force_to_memory/src/i386.c:12694:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_force_to_memory/src/obj/i386.o] Error 1
